@@ -7,8 +7,9 @@
 - Improved few translation strings.
 - Added limit for "Service Capacity" on a service add and edit screen to the number of defined workers.
 - Fixed a problem with more than one Service Provider on schedule table, when first is already busy, but secound is not.
-- FIxed a problem with not available calendars on Service Provider profile.
+- Fixed a problem with not available calendars on Service Provider profile.
 - Improved UX on "Payments" tab for MarketPress integration.
+- GDPR: Added ability to delete older appointments. You can setup how long presents appointments should be stored in database.
 
 2018-xx-xx - 2.2.8
 -------------------------------
